#20 refactor unit and integration tests